force-app/main/default/objects/Case/fields/CRM_Global_NextFollowUpDate__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_NextFollowUpDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Next Follow Up Date</label>
    <type>Date</type>
</CustomField>