force-app/main/default/objects/Case/fields/CRM_Global_NonPolicyEnquiry__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_NonPolicyEnquiry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non Policy Enquiry</label>
    <type>Checkbox</type>
</CustomField>