force-app/main/default/objects/Case/fields/CRM_Global_OfficialReceiveDate__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_OfficialReceiveDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Official Receive Date</label>
    <type>Date</type>
</CustomField>