force-app/main/default/objects/Case/fields/CRM_Global_Outbound_Call_Type__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_Outbound_Call_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Outbound Call Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>