force-app/main/default/objects/Case/fields/CRM_Global_Outbound_Channel__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_Outbound_Channel__c</fullName>
    <label>Outbound Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Specified</fullName>
                <default>true</default>
                <label>Not Specified</label>
            </value>
            <value>
                <fullName>HongKong</fullName>
            </value>
            <value>
                <fullName>Macau</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>