force-app/main/default/objects/Case/fields/CRM_Global_Outbound_Sub_Type_1__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_Outbound_Sub_Type_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Outbound Sub Type 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>