force-app/main/default/objects/Case/fields/CRM_Global_Outbound_TAT_StartDate__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_Outbound_TAT_StartDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Outbound TAT StartDate</label>
    <type>DateTime</type>
</CustomField>