force-app/main/default/objects/Case/fields/CRM_Global_PointToBeIncludedInTheEmail__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_PointToBeIncludedInTheEmail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Point to be included in the email</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>