force-app/main/default/objects/Case/fields/CRM_Global_PolicyOwner__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_PolicyOwner__c</fullName>
    <formula>CRM_Global_Policy__r.CRM_Global_PolicyOwner__c</formula>
    <label>Policy Owner</label>
    <type>Text</type>
</CustomField>