force-app/main/default/objects/Case/fields/CRM_Global_RandomCheck__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_RandomCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Random Check</label>
    <type>Checkbox</type>
</CustomField>