force-app/main/default/objects/Case/fields/CRM_Global_Recipient_1__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_Recipient_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Recipient 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>