force-app/main/default/objects/Case/fields/CRM_Global_Recipient_1_External__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_Recipient_1_External__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Case Recipient 1 (External)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>