force-app/main/default/objects/Case/fields/CRM_Global_Recipient_2__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_Recipient_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Recipient 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>