force-app/main/default/objects/Case/fields/CRM_Global_Recipient_2_External__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_Recipient_2_External__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Case Recipient 2 (External)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>