force-app/main/default/objects/Case/fields/CRM_Global_RefundChannel__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_RefundChannel__c</fullName>
    <label>Refund Channel</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PPS</fullName>
            </value>
            <value>
                <fullName>JETCO</fullName>
            </value>
            <value>
                <fullName>TT</fullName>
            </value>
            <value>
                <fullName>BOC CDM</fullName>
            </value>
            <value>
                <fullName>OCBC</fullName>
            </value>
            <value>
                <fullName>CITIC</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>EPS</fullName>
            </value>
            <value>
                <fullName>CUP card</fullName>
            </value>
            <value>
                <fullName>BOC Bill Payment</fullName>
            </value>
            <value>
                <fullName>HSBC Bill Payment</fullName>
            </value>
            <value>
                <fullName>FPS</fullName>
            </value>
            <value>
                <fullName>SCB OTC</fullName>
            </value>
            <value>
                <fullName>HKD Cheque</fullName>
            </value>
            <value>
                <fullName>Local USD Cheque</fullName>
            </value>
            <value>
                <fullName>Oversea USD Cheque</fullName>
            </value>
            <value>
                <fullName>Others (pls specificy)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>