force-app/main/default/objects/Case/fields/CRM_Global_RequestCaseType__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_RequestCaseType__c</fullName>
    <label>Request Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Follow Up</fullName>
            </value>
            <value>
                <fullName>Chaser</fullName>
            </value>
            <value>
                <fullName>Supervisor Assistance</fullName>
            </value>
            <value>
                <fullName>Request Approval</fullName>
            </value>
            <value>
                <fullName>Locate Payment</fullName>
            </value>
            <value>
                <fullName>Stop and Reissue Cheque</fullName>
            </value>
            <value>
                <fullName>ACT Quotation</fullName>
            </value>
            <value>
                <fullName>CFI</fullName>
            </value>
            <value>
                <fullName>Request Coupons</fullName>
            </value>
            <value>
                <fullName>ACT Quotation &amp; Client Letter</fullName>
            </value>
            <value>
                <fullName>TT Payment</fullName>
            </value>
            <value>
                <fullName>Bankruptcy Enquiry</fullName>
            </value>
            <value>
                <fullName>Reissue Document</fullName>
            </value>
            <value>
                <fullName>Payout Status</fullName>
            </value>
            <value>
                <fullName>Issue Letter To Client</fullName>
            </value>
            <value>
                <fullName>Issue Email To Client</fullName>
            </value>
            <value>
                <fullName>Assign Return Call</fullName>
            </value>
            <value>
                <fullName>PA Request</fullName>
            </value>
            <value>
                <fullName>Claims Form / Enquiry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>