force-app/main/default/objects/Case/fields/CRM_Global_RequestSummary_1__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_RequestSummary_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Request Summary 1</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>