force-app/main/default/objects/Case/fields/CRM_Global_RequestSummary_2__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_RequestSummary_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Request Summary 2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>