force-app/main/default/objects/Case/fields/CRM_Global_ScheduledTime__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_ScheduledTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Scheduled Time</label>
    <type>DateTime</type>
</CustomField>