force-app/main/default/objects/Case/fields/CRM_Global_ServicingUser__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_ServicingUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Servicing User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ServicingCases</relationshipName>
    <type>Lookup</type>
</CustomField>