force-app/main/default/objects/Case/fields/CRM_Global_SLAType__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_SLAType__c</fullName>
    <label>SLA Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>O</fullName>
                <label>Office hour</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>Non-office hour</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>