force-app/main/default/objects/Case/fields/CRM_Global_SMS__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_SMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SMS</label>
    <type>Checkbox</type>
</CustomField>