force-app/main/default/objects/Case/fields/CRM_Global_Source__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_Source__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>