force-app/main/default/objects/Case/fields/CRM_Global_SourceCase__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_SourceCase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicates a link to a parent or source Case.</description>
    <label>Source Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>