force-app/main/default/objects/Case/fields/CRM_Global_SpecificDeadline__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_SpecificDeadline__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Specific Deadline</label>
    <type>Date</type>
</CustomField>