force-app/main/default/objects/Case/fields/CRM_Global_SubmitDateTime__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_SubmitDateTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Submit Date Time</label>
    <type>DateTime</type>
</CustomField>