force-app/main/default/objects/Case/fields/CRM_Global_Suspicious__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_Suspicious__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suspicious</label>
    <type>Checkbox</type>
</CustomField>