force-app/main/default/objects/Case/fields/CRM_Global_TargetCompleteTime__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_TargetCompleteTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Target Complete Time</label>
    <type>DateTime</type>
</CustomField>