force-app/main/default/objects/Case/fields/CRM_Global_TAT_DueDate_2__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_TAT_DueDate_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TAT Due Date 2</label>
    <type>DateTime</type>
</CustomField>