force-app/main/default/objects/Case/fields/CRM_Global_TAT_Time__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_TAT_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TAT Time</label>
    <type>DateTime</type>
</CustomField>