force-app/main/default/objects/Case/fields/CRM_Global_UR__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_UR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UR</label>
    <type>Checkbox</type>
</CustomField>