force-app/main/default/objects/Case/fields/CRM_Global_VM_AgentCode__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_VM_AgentCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>VM Agent Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>