force-app/main/default/objects/Case/fields/CRM_Global_VM_MeetingLink__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_VM_MeetingLink__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Meeting Link</label>
    <type>Url</type>
</CustomField>