force-app/main/default/objects/Case/fields/CRM_Global_WaitingTime__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_WaitingTime__c</fullName>
    <formula>0</formula>
    <label>Waiting Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>