force-app/main/default/objects/Case/fields/CRM_Global_WalkInEndTime__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_WalkInEndTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Walk-In End Time</label>
    <type>DateTime</type>
</CustomField>