force-app/main/default/objects/Case/fields/CRM_Global_WalkInStartTime__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_WalkInStartTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Walk-In Start Time</label>
    <type>DateTime</type>
</CustomField>