force-app/main/default/objects/Case/fields/CRM_Global_WrapUpCategory__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_WrapUpCategory__c</fullName>
    <label>Wrap Up Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ICC(PS):DDA, premium, payment, loan or refund</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>