force-app/main/default/objects/Case/fields/CRM_Global_WrapUpItem__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_WrapUpItem__c</fullName>
    <label>Wrap Up Item</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DDA collection status/reject reason</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>