force-app/main/default/objects/Case/fields/CRM_PHKL_CaseLanguage__c.field-meta.xml
<CustomField>
    <fullName>CRM_PHKL_CaseLanguage__c</fullName>
    <label>Case Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cantonese</fullName>
            </value>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Mandarin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>