force-app/main/default/objects/Case/fields/CRM_PHKL_Next_Check_Time__c.field-meta.xml
<CustomField>
    <fullName>CRM_PHKL_Next_Check_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Next Check Time</label>
    <type>DateTime</type>
</CustomField>