force-app/main/default/objects/Case/fields/Email_Template_Reference__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Email Template Reference</label>
    <referenceTo>Email_Template_Reference__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>