force-app/main/default/objects/Case/fields/genesysps__Activity_History__c.field-meta.xml
<CustomField>
    <fullName>genesysps__Activity_History__c</fullName>
    <description>Activity history log for Genesys conversation activities (JSON array format)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Activity History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>