force-app/main/default/objects/Case/fields/genesysps__Conversation_Disconnected__c.field-meta.xml
<CustomField>
    <fullName>genesysps__Conversation_Disconnected__c</fullName>
    <description>Date and time when the Genesys conversation was disconnected</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Conversation Disconnected</label>
    <type>DateTime</type>
</CustomField>