force-app/main/default/objects/Case/fields/genesysps__Conversation_Id__c.field-meta.xml
<CustomField>
    <fullName>genesysps__Conversation_Id__c</fullName>
    <description>Unique identifier for the Genesys conversation</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Conversation Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>