force-app/main/default/objects/Case/fields/genesysps__Conversation_Last_Modified__c.field-meta.xml
<CustomField>
    <fullName>genesysps__Conversation_Last_Modified__c</fullName>
    <description>Date and time when the Genesys conversation was last modified</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Conversation Last Modified</label>
    <type>DateTime</type>
</CustomField>