force-app/main/default/objects/Case/fields/genesysps__Conversation_Status__c.field-meta.xml
<CustomField>
    <fullName>genesysps__Conversation_Status__c</fullName>
    <description>Current status of the Genesys conversation</description>
    <label>Conversation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Transferred</fullName>
            </value>
            <value>
                <fullName>Disconnected</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>