force-app/main/default/objects/Case/recordTypes/Enquiry.recordType-meta.xml
<RecordType>
    <fullName>Enquiry</fullName>
    <active>true</active>
    <businessProcess>Enquiry</businessProcess>
    <label>Enquiry</label>
</RecordType>