force-app/main/default/objects/Case/recordTypes/Enquiry_Outbound.recordType-meta.xml
<RecordType>
    <fullName>Enquiry_Outbound</fullName>
    <active>true</active>
    <businessProcess>Master Outbound</businessProcess>
    <label>Enquiry Outbound</label>
</RecordType>