force-app/main/default/objects/Case/recordTypes/Master_Inbound.recordType-meta.xml
<RecordType>
    <fullName>Master_Inbound</fullName>
    <active>true</active>
    <businessProcess>Master Inbound</businessProcess>
    <description>The master record type for Enquiry and Request cases</description>
    <label>Master Inbound</label>
</RecordType>