force-app/main/default/objects/Case/recordTypes/Master_Outbound.recordType-meta.xml
<RecordType>
    <fullName>Master_Outbound</fullName>
    <active>true</active>
    <businessProcess>Master Outbound</businessProcess>
    <label>Master Outbound</label>
</RecordType>