force-app/main/default/objects/Case/recordTypes/Request.recordType-meta.xml
<RecordType>
    <fullName>Request</fullName>
    <active>true</active>
    <businessProcess>Request</businessProcess>
    <label>Request</label>
</RecordType>