force-app/main/default/objects/Case/listViews/ACT_Case.listView-meta.xml
<ListView>
    <fullName>ACT_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>ACT</label>
    <queue>CRM_Global_ACT</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>