force-app/main/default/objects/Case/listViews/All_Enquiry_Case.listView-meta.xml
<ListView>
    <fullName>All_Enquiry_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>CASES.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Enquiry</value>
    </filters>
    <label>All Enquiry Case</label>
</ListView>