force-app/main/default/objects/Case/listViews/All_Request_Case.listView-meta.xml
<ListView>
    <fullName>All_Request_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>CASES.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>PARENT.CASE_NUMBER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Request</value>
    </filters>
    <label>All Request Case</label>
</ListView>