force-app/main/default/objects/Case/listViews/Cashier_Case.listView-meta.xml
<ListView>
    <fullName>Cashier_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Cashier</label>
    <queue>CRM_Global_Cashier</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>