force-app/main/default/objects/Case/listViews/Corr_Case.listView-meta.xml
<ListView>
    <fullName>Corr_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Corr</label>
    <queue>CRM_Global_Corr</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>