force-app/main/default/objects/Case/listViews/CR_Team_Case.listView-meta.xml
<ListView>
    <fullName>CR_Team_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>CR Team</label>
    <queue>CRM_Global_CR_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>