force-app/main/default/objects/Case/listViews/CRM_Global_Claims_Case.listView-meta.xml
<ListView>
    <fullName>CRM_Global_Claims_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Claims</label>
    <queue>CRM_Global_Claims</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>