force-app/main/default/objects/Case/listViews/CRM_Global_CSR_Supervisor_Case.listView-meta.xml
<ListView>
    <fullName>CRM_Global_CSR_Supervisor_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>CSR Supervisor</label>
    <queue>CRM_Global_CSR_Supervisor</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>