force-app/main/default/objects/Case/listViews/CRM_Global_Finance_Payment_Team_Case.listView-meta.xml
<ListView>
    <fullName>CRM_Global_Finance_Payment_Team_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Finance (Payment Team)</label>
    <queue>CRM_Global_Finance_Payment_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>