force-app/main/default/objects/Case/listViews/CRM_Global_IB_Case.listView-meta.xml
<ListView>
    <fullName>CRM_Global_IB_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>IB</label>
    <queue>CRM_Global_IB</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>